--- a/src/default-modules/ui/core/tooltip/tooltip.scss
+++ b/src/default-modules/ui/core/tooltip/tooltip.scss
@@ -3,6 +3,15 @@
 
   background: rgba(0,0,0,.5);
 
+  visibility: visible;
+  opacity: 1;
+  transition: opacity .2s, visibility .2s;
+
+  &.tooltipHidden {
+    visibility: hidden;
+    opacity: 0;
+  }
+
   &[x-placement^='top'] {
     margin-bottom: 9px;
   }
@@ -20,7 +29,7 @@
   }
 }
 
-.tooltip-inner {
+.tooltipInner {
   font-size: 11px;
   line-height: 12px;
 
