--- a/src/index.ejs
+++ b/src/index.ejs
@@ -16,7 +16,10 @@
       overflow: hidden;
     }
 
-    body {
+    #player-wrapper {
+      height: 100%;
+      width: 100%;
+
       display: flex;
       justify-content: center;
       align-items: center;
