--- a/src/default-modules/ui/loader/loader.scss
+++ b/src/default-modules/ui/loader/loader.scss
@@ -22,6 +22,12 @@ $timing: 1s;
   animation: rotate $timing linear infinite;
 
   color: white;
+  
+  display: none;
+  
+  &.active {
+    display: block;
+  }
 
   @mixin inner-circle() {
     position: absolute;
