--- a/src/default-modules/ui/overlay/overlay.scss
+++ b/src/default-modules/ui/overlay/overlay.scss
@@ -8,10 +8,13 @@
   bottom: 0;
   left: 0;
 
-  display: flex;
+  display: none;
 
-  justify-content: center;
-  align-items: center;
+  &.active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .poster {
@@ -45,6 +48,7 @@
 }
 
 .icon {
+  cursor: pointer;
   position: relative;
 
   width: 71px;
