--- a/src/default-modules/ui/core/tooltip/tooltip.scss
+++ b/src/default-modules/ui/core/tooltip/tooltip.scss
@@ -1,30 +1,32 @@
 .tooltip {
+  visibility: visible;
+
   padding: 4px 7px;
 
-  background: rgba(0,0,0,.5);
-
-  visibility: visible;
-  opacity: 1;
   transition: opacity .2s, visibility .2s;
+
+  opacity: 1;
+  background: rgba(0,0,0,.5);
 
   &.tooltipHidden {
     visibility: hidden;
+
     opacity: 0;
   }
 
-  &[x-placement^='top'] {
+  &[data-popper-placement^='top'] {
     margin-bottom: 9px;
   }
 
-  &[x-placement^='bottom'] {
+  &[data-popper-placement^='bottom'] {
     margin-top: 9px;
   }
 
-  &[x-placement^='right'] {
+  &[data-popper-placement^='right'] {
     margin-left: 9px;
   }
 
-  &[x-placement^='left'] {
+  &[data-popper-placement^='left'] {
     margin-right: 9px;
   }
 }
