initial jss theming POC

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -21,6 +21,7 @@
       width: 100%;
 
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
     }
@@ -29,5 +30,12 @@
 </head>
 <body>
 <div id="player-wrapper"></div>
+<div id="theme-switcher">
+  <h3>Switch color: </h3>
+  <button data-color="#FFF">white</button>
+  <button data-color="#F00">red</button>
+  <button data-color="#0F0">green</button>
+  <button data-color="#00F">blue</button>
+</div>
 </body>
 </html>
