--- a/src/index.ejs
+++ b/src/index.ejs
@@ -14,6 +14,10 @@
       height: 100%;
       width: 100%;
       overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
 
     #player-wrapper {
@@ -29,7 +33,6 @@
   <script src="<%= staticsBaseUrl %>video-player-develop.bundle.js"></script>
 </head>
 <body>
-<div id="player-wrapper"></div>
 <div id="theme-switcher">
   <h3>Switch color: </h3>
   <button data-color="#FFF">white</button>
@@ -37,5 +40,6 @@
   <button data-color="#0F0">green</button>
   <button data-color="#00F">blue</button>
 </div>
+<div id="player-wrapper"></div>
 </body>
 </html>
