--- a/src/default-modules/ui/controls/volume/volume.scss
+++ b/src/default-modules/ui/controls/volume/volume.scss
@@ -39,11 +39,6 @@ $color: white !default;
   height: 26px;
   min-height: 26px;
 
-  background-image: url('../../../../assets/volume-100.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 17px 14px;
-
   @include in-full-screen() {
     width: 35px;
     min-width: 35px;
@@ -54,11 +49,11 @@ $color: white !default;
   }
 
   &.half-volume {
-    background-image: url('../../../../assets/volume-50.svg');
+    //    background-image: url('../../../../assets/volume-50.svg');
   }
 
   &.muted {
-    background-image: url('../../../../assets/volume-0.svg');
+    //    background-image: url('../../../../assets/volume-0.svg');
   }
 }
 
