--- a/src/default-modules/ui/core/tooltip/tooltip.scss
+++ b/src/default-modules/ui/core/tooltip/tooltip.scss
@@ -1,39 +1,20 @@
 @import '../../shared';
 
 .tooltip {
-  visibility: visible;
+  position: absolute;
+  z-index: 100;
 
-  padding: 4px 7px;
+  padding: 4px 5px;
 
   transition: opacity .2s, visibility .2s;
 
-  opacity: 1;
   background: rgba(0,0,0,.5);
 
-  @include max-width-280() {
-    padding: 2px 4px;
-  }
-
-  &.tooltipHidden {
-    visibility: hidden;
-
-    opacity: 0;
-  }
-
-  &[data-popper-placement^='top'] {
-    margin-bottom: 9px;
-  }
-
-  &[data-popper-placement^='bottom'] {
-    margin-top: 9px;
-  }
-
-  &[data-popper-placement^='right'] {
-    margin-left: 9px;
-  }
-
-  &[data-popper-placement^='left'] {
-    margin-right: 9px;
+  visibility: hidden;
+  opacity: 0;
+  &.tooltipVisible {
+    visibility: visible;
+    opacity: 1;
   }
 }
 
@@ -44,9 +25,4 @@
   white-space: nowrap;
 
   color: white;
-
-  @include max-width-280() {
-    font-size: 10px;
-    line-height: 11px;
-  }
 }
