_texts => _textMap in view; Adding left and right margin for tooltip container

--- a/src/default-modules/ui/core/tooltip/tooltip-container.scss
+++ b/src/default-modules/ui/core/tooltip/tooltip-container.scss
@@ -10,6 +10,5 @@ $progressBarOffset: 4px;
 
   display: flex;
 
-  margin-top: $tooltipMargin;
-  margin-bottom: $tooltipMargin - $progressBarOffset;
+  margin: $tooltipMargin $tooltipMargin $tooltipMargin - $progressBarOffset;
 }
