themes - add `progressColor` theme param. Use `progressColor` theme param in demo

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -34,7 +34,7 @@
 </head>
 <body>
 <div id="theme-switcher">
-  <h3>Switch color: </h3>
+  <h3>Switch progress bar color: </h3>
   <button data-color="#FFF">white</button>
   <button data-color="#F00">red</button>
   <button data-color="#0F0">green</button>
