--- a/src/default-modules/root-container/root-container.scss
+++ b/src/default-modules/root-container/root-container.scss
@@ -1,7 +1,7 @@
 @import '../ui/shared';
 
 
-.video-wrapper {
+.videoWrapper {
   font-family: HelveticaNeueW01-45Ligh,HelveticaNeueW02-45Ligh,HelveticaNeueW10-45Ligh,Helvetica Neue,Helvetica,Arial,\\30E1\30A4\30EA\30AA,meiryo,\\30D2\30E9\30AE\30CE\89D2\30B4 pro w3,hiragino kaku gothic pro;
   line-height: 0;
 
@@ -17,13 +17,13 @@
     border: 0;
   }
 
-  .full-screen-control {
+  .fullScreenControl {
     display: none;
   }
 }
 
-.fill-all-space,
-.full-screen {
+.fillAllSpace,
+.fullScreen {
   width: 100%!important;
   height: 100%!important;
 }
