add `LiveStateEngine`. Use `LiveStateEngine` in `LiveIndicator` and `Progress` controls

--- a/src/default-modules/ui/live-indicator/live-indicator.scss
+++ b/src/default-modules/ui/live-indicator/live-indicator.scss
@@ -28,7 +28,11 @@ $inactive-color: #959595;
     padding: 2px 3px;
   }
 
-  &:hover,
+  &.ended {
+    cursor: default;
+  }
+
+  &:hover:not(.ended),
   &.active {
     background-color: $active-color;
   }
