--- a/src/default-modules/ui/controls/volume/volume.scss
+++ b/src/default-modules/ui/controls/volume/volume.scss
@@ -38,6 +38,7 @@ $color: white !default;
   min-width: 26px;
   height: 26px;
   min-height: 26px;
+  padding: 0;
 
   @include in-full-screen() {
     width: 35px;
