--- a/src/default-modules/ui/interaction-indicator/interaction-indicator.scss
+++ b/src/default-modules/ui/interaction-indicator/interaction-indicator.scss
@@ -1,12 +1,14 @@
 .icon-container {
   position: absolute;
-  z-index: 2;
+  z-index: 100;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
 
   display: flex;
+
+  pointer-events: none;
 
   justify-content: center;
   align-items: center;
