--- a/src/default-modules/ui/shared.scss
+++ b/src/default-modules/ui/shared.scss
@@ -26,7 +26,9 @@
   visibility: hidden !important;
 
   width: 0 !important;
+  min-width: 0 !important;
   height: 0 !important;
+  min-height: 0 !important;
   margin: 0 !important;
   padding: 0 !important;
 
