[VP-145] rename `video-player` => `playable` in bundle file names

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -25,7 +25,7 @@
       align-items: center;
     }
   </style>
-  <script src="<%= staticsBaseUrl %>video-player-develop.bundle.js"></script>
+  <script src="<%= staticsBaseUrl %>playable-develop.bundle.js"></script>
 </head>
 <body>
 <div id="theme-switcher">
