--- a/src/default-modules/ui/controls/progress/progress.scss
+++ b/src/default-modules/ui/controls/progress/progress.scss
@@ -113,6 +113,7 @@ $color-sync-pointer-hover-border: #fff;
 
   display: none;
 
+  box-sizing: content-box;
   width: $sync-pointer-width;
   height: $sync-pointer-height;
 
