--- a/src/default-modules/ui/debug-panel/debug-panel.scss
+++ b/src/default-modules/ui/debug-panel/debug-panel.scss
@@ -1,6 +1,6 @@
 @import '../shared';
 
-.video-player-debug-panel {
+.debugPanel {
   position: absolute;
   z-index: 10000;
   top: 10px;
@@ -14,7 +14,7 @@
   border-radius: 3px;
   background-color: rgba(0, 0, 0, .95);
 
-  .close-button {
+  .closeButton {
     position: absolute;
     top: 10px;
     right: 5px;
@@ -28,7 +28,7 @@
     }
   }
 
-  .info-container {
+  .infoContainer {
     font-size: 8px;
     line-height: 8px;
 
