Adding ability to pass your own video element in player

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -36,5 +36,10 @@
   <button data-color="#00F">blue</button>
 </div>
 <div id="player-wrapper"></div>
+<div id="types">
+  <button id="HLS" data-type="HLS">HLS</button>
+  <button id="DASH" data-type="DASH">DASH</button>
+  <button id="MP4" data-type="MP4">MP4</button>
+</div>
 </body>
 </html>
