Small refactoring of develop.ts

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -37,9 +37,10 @@
 </div>
 <div id="player-wrapper"></div>
 <div id="types">
-  <button id="HLS" data-type="HLS">HLS</button>
-  <button id="DASH" data-type="DASH">DASH</button>
-  <button id="MP4" data-type="MP4">MP4</button>
+  <h3>Switch video format: </h3>
+  <button data-type="HLS">HLS</button>
+  <button data-type="DASH">DASH</button>
+  <button data-type="MP4">MP4</button>
 </div>
 </body>
 </html>
