--- a/src/default-modules/ui/shared.scss
+++ b/src/default-modules/ui/shared.scss
@@ -4,6 +4,8 @@
 .controlButton {
   display: flex;
 
+  box-sizing: content-box;
+
   cursor: pointer;
   transition-duration: .2s;
   transition-property: opacity;
