add normalize.css styles for playable buttons

--- a/src/default-modules/root-container/root-container.scss
+++ b/src/default-modules/root-container/root-container.scss
@@ -14,6 +14,7 @@
   outline: none;
 
   // NOTE: reset css to initial in player nodes
+  @import './normalize/button';
   *,
   *:before,
   *:after {
