Setting empty prefix for element query until major version

--- a/src/default-modules/ui/media-query-mixins.scss
+++ b/src/default-modules/ui/media-query-mixins.scss
@@ -5,7 +5,7 @@
 }
 
 @mixin query-basic($query, $value) {
-  div[data-hook='player-container'][data-#{$query}~=#{'"' + $value + '"'}] & {
+  div[data-hook='player-container'][#{$query}~=#{'"' + $value + '"'}] & {
     @content
   }
 }
