--- a/src/default-modules/root-container/root-container.scss
+++ b/src/default-modules/root-container/root-container.scss
@@ -8,6 +8,7 @@
   position: relative;
   z-index: 0;
 
+  display: block;
   overflow: hidden;
 
   height: inherit;
@@ -22,7 +23,7 @@
   }
 
   &.hiddenCursor {
-    cursor: none!important;
+    cursor: none;
   }
 }
 
