--- a/src/default-modules/ui/bottom-block/bottom-block.scss
+++ b/src/default-modules/ui/bottom-block/bottom-block.scss
@@ -16,6 +16,8 @@
     .controlsContainerLeft,
     .controlsContainerRight,
     .logoContainer {
+      visibility: visible;
+
       opacity: 1;
     }
   }
@@ -90,6 +92,8 @@
 .controlsContainerLeft,
 .controlsContainerRight,
 .logoContainer {
+  visibility: hidden;
+
   transition: opacity .2s, visibility .2s;
 
   opacity: 0;
