--- a/src/default-modules/ui/controls/logo/logo.scss
+++ b/src/default-modules/ui/controls/logo/logo.scss
@@ -7,7 +7,6 @@
 
   display: flex;
 
-  cursor: pointer;
   transition: opacity .2s, visibility .2s;
   transition-duration: .2s;
 
@@ -16,15 +15,15 @@
   justify-content: center;
   align-items: center;
 
-  &:hover {
-    .logoPlaceholder,
-    img {
-      opacity: .7;
-    }
-  }
-
   &.link {
     cursor: pointer;
+
+    &:hover {
+      .logoPlaceholder,
+      img {
+        opacity: .7;
+      }
+    }
   }
 }
 
@@ -49,18 +48,32 @@
 }
 
 .logoPlaceholder {
-  width: 14px;
-  min-width: 14px;
-  height: 14px;
-  min-height: 14px;
+  width: 26px;
+  min-width: 26px;
+  height: 26px;
+  min-height: 26px;
 
   transition: transform .2s;
 
   @include in-full-screen() {
-    width: 21px;
-    min-width: 21px;
-    height: 21px;
-    min-height: 21px;
+    width: 35px;
+    min-width: 35px;
+    height: 35px;
+    min-height: 35px;
+
+    .icon {
+      width: 21px;
+      min-width: 21px;
+      height: 21px;
+      min-height: 21px;
+    }
+  }
+
+  .icon {
+    width: 14px;
+    min-width: 14px;
+    height: 14px;
+    min-height: 14px;
   }
 
   &:hover {
