--- a/src/default-modules/ui/main-ui-block/main-ui-block.scss
+++ b/src/default-modules/ui/main-ui-block/main-ui-block.scss
@@ -1,4 +1,4 @@
-.main-ui-block {
+.mainUiBlock {
   position: absolute;
   top: 0;
   right: 0;
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
 
-  .tooltip-container-wrapper {
+  .tooltipContainerWrapper {
     position: relative;
 
     flex-grow: 2;
