--- a/src/default-modules/ui/bottom-block/bottom-block.scss
+++ b/src/default-modules/ui/bottom-block/bottom-block.scss
@@ -20,6 +20,12 @@
 
       opacity: 1;
     }
+
+    .background {
+      visibility: visible;
+
+      opacity: 1;
+    }
   }
 
   &.showLogoAlways {
@@ -72,6 +78,8 @@
 }
 
 .elementsContainer {
+  position: relative;
+
   display: flex;
 
   width: 100%;
@@ -206,4 +214,29 @@
   @include max-width-280() {
     margin-right: 12px;
   }
+}
+
+.background {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  visibility: hidden;
+
+  height: 182px;
+
+  transition: opacity .2s, visibility .2s;
+  pointer-events: none;
+
+  opacity: 0;
+  background-image: linear-gradient(
+  to bottom,
+  rgba(0, 0, 0, .0),
+  rgba(0, 0, 0, .03) 24%,
+  rgba(0, 0, 0, .15) 50%,
+  rgba(0, 0, 0, .3) 75%,
+  rgba(0, 0, 0, .4)
+  );
+  background-size: 100% 182px;
 }
