--- a/src/default-modules/ui/top-block/top-block.scss
+++ b/src/default-modules/ui/top-block/top-block.scss
@@ -1,6 +1,7 @@
 @import '../shared';
 
 .topBlock {
+  position: relative;
   z-index: 60;
 
   &::-moz-focus-inner {
@@ -14,6 +15,11 @@
 
       opacity: 1;
     }
+    .background {
+      visibility: visible;
+
+      opacity: 1;
+    }
   }
 }
 
@@ -22,6 +28,8 @@
 }
 
 .elementsContainer {
+  position: relative;
+
   display: flex;
   flex-direction: row;
 
@@ -53,4 +61,29 @@
   opacity: 0;
 
   flex-grow: 1;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+
+  visibility: hidden;
+
+  height: 182px;
+
+  transition: opacity .2s, visibility .2s;
+  pointer-events: none;
+
+  opacity: 0;
+  background-image: linear-gradient(
+  to top,
+  rgba(0, 0, 0, .0),
+  rgba(0, 0, 0, .03) 24%,
+  rgba(0, 0, 0, .15) 50%,
+  rgba(0, 0, 0, .3) 75%,
+  rgba(0, 0, 0, .4)
+  );
+  background-size: 100% 182px;
 }
