--- a/src/modules/ui/screen/screen.scss
+++ b/src/modules/ui/screen/screen.scss
@@ -12,6 +12,8 @@
   width: 100%;
   height: 100%;
 
+  background-color: black;
+
   justify-content: center;
 
   &.verticalVideo {
@@ -49,9 +51,6 @@ $canvas-padding-horizontal: 20px;
   right: 0;
   bottom: 0;
   left: -$canvas-padding-horizontal;
-
-  width: calc(100% + 2 * $canvas-padding-horizontal);
-  height: calc(100% + 2 * $canvas-padding-vertical);
 
   filter: blur(14px);
 }
